package ui;

public interface UserInterface {
    void showMessage(String message);
}
